Emma en el menu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-expand-xl navbar-light fixed-top">
         <div class="container">
             <!-- Brand -->
-            <a class="navbar-brand wow slideInLeft" href="#">Emmanuel <i class="fas fa-heartbeat hvr-pulse"></i> Andrea<span class="nav-logo-image"></span></a>
+            <a class="navbar-brand wow slideInLeft" href="#">Emma <i class="fas fa-heartbeat hvr-pulse"></i> Andrea<span class="nav-logo-image"></span></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
