cambio de imagenes y fix flex

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50" id="home">
     <nav class="navbar navbar-expand-xl navbar-light fixed-top">
-        <div class="container">
-            <!-- Brand -->
-            <a class="navbar-brand wow slideInLeft" href="#">Emma <i class="fas fa-heartbeat hvr-pulse"></i> Andrea<span class="nav-logo-image"></span></a>
-
+        <div class="container navegacion-barra">
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+            <!-- Brand -->
+            <a class="navbar-brand wow slideInLeft" href="#">Emma <i class="fas fa-heartbeat hvr-pulse"></i> Andy<span class="nav-logo-image"></span></a>
 
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -287,7 +287,7 @@
 
                 <div class="col-xl-6 col-md-6 event text-center">
                     <div class="col-xl-11 p-0 border-area">
-                        <img src="img/section5/wedding.jpeg" />
+                        <img src="img/section5/wedding.jpg" />
                         <div class="content">
                             <h1>Ceremonia</h1>
                             <p>La ceremonia se realizará el 19 de Febrero a las 09:00 horas en la Parroquia Ntra. Sra. del Carmen, Tigre. Tocá el botón de abajo para recibir las indicaciones para llegar</p>
@@ -305,7 +305,7 @@
 
                 <div class="col-xl-6 col-md-6 event text-center">
                     <div class="col-xl-11 p-0 border-area">
-                        <img src="img/section5/party.jpeg" />
+                        <img src="img/section5/party.jpg" />
                         <div class="content">
                             <h1>Fiesta</h1>
                             <p>Después de la ceremonia festejaremos en Astilleros Milberg, Nordelta. Tocá el botón de abajo y encontrá las indicaciones para llegar, te esperamos 😉</p>
