--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <img src="img/section5/wedding.jpg" />
                         <div class="content">
                             <h1>Ceremonia</h1>
-                            <p>La ceremonia se realizará el 19 de Febrero a las 09:00 horas en la Parroquia Ntra. Sra. del Carmen, Tigre. Tocá el botón de abajo para recibir las indicaciones para llegar</p>
+                            <p>La ceremonia religiosa se realizará el día 19/02/22 a las 11 Hs. en la Vicaría San Luis de la Candelaria. Tocá el botón de abajo para recibir las indicaciones para llegar</p>
                             <div class="col-xl-12 col-md-12 col-12 send-button">
                                 <button class="btn btn-primary">LLEGAR A LA CEREMONIA</button>
                             </div>
@@ -308,7 +308,7 @@
                         <img src="img/section5/party.jpg" />
                         <div class="content">
                             <h1>Fiesta</h1>
-                            <p>Después de la ceremonia festejaremos en Astilleros Milberg, Nordelta. Tocá el botón de abajo y encontrá las indicaciones para llegar, te esperamos 😉</p>
+                            <p>Luego de la ceremonia religiosa, realizaremos la ceremonia civil y festejaremos en Aracar Eventos hasta las 19 horas. Tocá el botón de abajo y encontrá las indicaciones para llegar, te esperamos 😉</p>
                             <div class="col-xl-12 col-md-12 col-12 send-button">
                                 <button class="btn btn-primary">LLEGAR A LA FIESTA</button>
                             </div>
@@ -549,7 +549,13 @@
 
                 </div> -->
                 <div class="col-xl-12 heading">
-                    <h1>Si deseas realizarnos un regalo...</h1>
+                    <h1>Tarjeta</h1>
+                </div>
+
+                <div class="row" >
+                    <div class="col-xl-12 col-md-12 col-12">
+                        <p>Estuvieron siempre con nosotros y sabemos que esta vez será también así. Por eso no queremos otro regalo más que su presencia en este día tan importante para nosotros. El costo de la tarjeta es de $3000 por persona.</p>
+                    </div>
                 </div>
 
                 <div class="col-xl-12 col-md-12 col-12 send-button">
