--- a/index.html
+++ b/index.html
@@ -37,42 +37,45 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="50" id="home">
     <nav class="navbar navbar-expand-xl navbar-light fixed-top">
         <div class="container navegacion-barra">
+            <div class="row">
             <!-- Toggler/collapsibe Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <!-- Brand -->
-            <a class="navbar-brand wow slideInLeft" href="#">Emma <i class="fas fa-heartbeat hvr-pulse"></i> Andy<span class="nav-logo-image"></span></a>
-
+                <!-- Brand -->
+                <a class="navbar-brand wow slideInLeft" href="#">Emma <i class="fas fa-heartbeat hvr-pulse"></i> Andy<span class="nav-logo-image"></span></a>
+            </div>
+            <div class="row">
             <!-- Navbar links -->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav ml-auto">
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav ml-auto">
 
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#home">INICIO</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#cuple">cuple</a>
-                    </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="#events">Evento</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#gallery-sec">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#regalo">Regalos</a>
-                    </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#home">INICIO</a>
+                        </li>
+                        <!-- <li class="nav-item">
+                            <a class="nav-link" href="#cuple">cuple</a>
+                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="#events">Evento</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#gallery-sec">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#regalo">Regalos</a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#asistencia">Asistencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#dresscode">Dresscode</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#asistencia">Asistencia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#dresscode">Dresscode</a>
+                        </li>
 
-                </ul>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
