--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <img src="img/section5/party.jpg" />
                         <div class="content">
                             <h1>Fiesta</h1>
-                            <p>Luego de la ceremonia religiosa, realizaremos la ceremonia civil y festejaremos en Aracar Eventos hasta las 19 horas. Tocá el botón de abajo y encontrá las indicaciones para llegar, te esperamos 😉</p>
+                            <p>Luego de la ceremonia religiosa, realizaremos la ceremonia civil y festejaremos en Aracar Eventos hasta las 19 Hs. Tocá el botón de abajo y encontrá las indicaciones para llegar, te esperamos 😉</p>
                             <div class="col-xl-12 col-md-12 col-12 send-button">
                                 <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/LMKCpsZaqLNM3pF49', '_blank');">LLEGAR A LA FIESTA</button>
                             </div>
