--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <a class="nav-link" href="#gallery-sec">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#regalo">Regalos</a>
+                            <a class="nav-link" href="#regalo">Tarjeta</a>
                         </li>
 
                         <li class="nav-item">
