fix colores y horario

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <h1>Ceremonia</h1>
                             <p>La ceremonia religiosa se realizará el día 19/02/22 a las 11 Hs. en la Vicaría San Luis de la Candelaria. Tocá el botón de abajo para recibir las indicaciones para llegar</p>
                             <div class="col-xl-12 col-md-12 col-12 send-button">
-                                <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/9C9ebrQDdwMR82Rg6', '_blank');">LLEGAR A LA CEREMONIA</button>
+                                <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/YhB5EtihUGcQZwfQ8', '_blank');">LLEGAR A LA CEREMONIA</button>
                             </div>
                             <!-- <ul liststyle-type-none>
                                 <li>park hayatt hotel,new york </li>
@@ -311,9 +311,9 @@
                         <img src="img/section5/party.jpg" />
                         <div class="content">
                             <h1>Fiesta</h1>
-                            <p>Luego de la ceremonia religiosa, realizaremos la ceremonia civil y festejaremos en Aracar Eventos hasta las 19 Hs. Tocá el botón de abajo y encontrá las indicaciones para llegar, te esperamos 😉</p>
+                            <p>Luego de la ceremonia religiosa, realizaremos la ceremonia civil y festejaremos en Aracar Eventos hasta las 19 Hs. Tocá el botón de abajo y encontrá las indicaciones para llegar</p>
                             <div class="col-xl-12 col-md-12 col-12 send-button">
-                                <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/LMKCpsZaqLNM3pF49', '_blank');">LLEGAR A LA FIESTA</button>
+                                <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/Vb4R63nhxzqMdJtB8', '_blank');">LLEGAR A LA FIESTA</button>
                             </div>
                             <!-- <ul liststyle-type-none>
                                 <li>park hayatt hotel,new york </li>
@@ -593,7 +593,7 @@
             <div class="row">
 
                 <div class="col-xl-12 heading">
-                    <h1>Confirmacion de asistencia</h1>
+                    <h1>Confirmación de asistencia</h1>
                 </div>
 
             </div>
