--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-6 content offset-xl-6">
-                    <div class="wrap-content">
+                    <div class="wrap-content fade-in-image">
                         <img src="img/section1/invitationbg.png" alt="Los Angeles">
                         <div class="text-box">
                             <p class="small-text">¡Nos casamos!</p>
