--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </button>
 
                 <!-- Brand -->
-                <a class="navbar-brand wow slideInLeft" href="#">Emma <i class="fas fa-heartbeat hvr-pulse"></i> Andy<span class="nav-logo-image"></span></a>
+                <a class="navbar-brand wow slideInLeft" href="#">Andrea <i class="fas fa-heartbeat hvr-pulse"></i> Emmanuel<span class="nav-logo-image"></span></a>
             </div>
             <div class="row">
             <!-- Navbar links -->
@@ -93,7 +93,7 @@
                             <h3 class="">Andrea</h3>
                             <p class="small-text">&</p>
                             <h3 class="">Emmanuel</h3>
-                            <p class="small-text">19.02.2022</p>
+                            <b><p class="small-text">19.02.2022</p></b>
                         </div>
                     </div>
                 </div>
