--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </button>
 
                 <!-- Brand -->
-                <a class="navbar-brand wow slideInLeft" href="#">Nare <i class="fas fa-heartbeat hvr-pulse"></i> Dario<span class="nav-logo-image"></span></a>
+                <a class="navbar-brand wow slideInLeft" href="#">Nare <i class="fas fa-heartbeat hvr-pulse"></i> Darío<span class="nav-logo-image"></span></a>
             </div>
             <div class="row">
             <!-- Navbar links -->
@@ -92,7 +92,7 @@
                             <p class="small-text">¡Nos casamos!</p>
                             <h3 class="">Nare</h3>
                             <p class="small-text">&</p>
-                            <h3 class="">Dario</h3>
+                            <h3 class="">Darío</h3>
                             <b><p class="small-text">19.11.2022</p></b>
                         </div>
                     </div>
@@ -267,9 +267,9 @@
                         <img src="img/section5/wedding.jpeg" />
                         <div class="content">
                             <h1>Ceremonia</h1>
-                            <p>La ceremonia religiosa se realizará el día 19/11/22 a las 20 Hs. en la Iglesia Nuestra Señora del Transito. Tocá el botón de abajo para recibir las indicaciones para llegar</p>
+                            <p>La ceremonia religiosa se realizará el día 19/11/22 a las 20 Hs. en la Iglesia Nuestra Señora del Tránsito. Tocá el botón de abajo para recibir las indicaciones para llegar</p>
                             <div class="col-xl-12 col-md-12 col-12 send-button">
-                                <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/aBZKfjjp8cYiaCwJ7', '_blank');">LLEGAR A LA CEREMONIA</button>
+                                <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/aBZKfjjp8cYiaCwJ7', '_blank');">COMO LLEGAR</button>
                             </div>
                             <!-- <ul liststyle-type-none>
                                 <li>park hayatt hotel,new york </li>
@@ -285,9 +285,9 @@
                         <img src="img/section5/party.jpg" />
                         <div class="content">
                             <h1>Fiesta</h1>
-                            <p>Luego de la ceremonia religiosa, realizaremos la ceremonia civil y festejaremos en Club 20 de Febrero - Salon Alvarado. Tocá el botón de abajo y encontrá las indicaciones para llegar</p>
+                            <p>Luego de la ceremonia religiosa, realizaremos la ceremonia civil y festejaremos en Club 20 de Febrero - Salón Alvarado. Tocá el botón de abajo y encontrá las indicaciones para llegar</p>
                             <div class="col-xl-12 col-md-12 col-12 send-button">
-                                <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/5Veiwfiv6KPTD5rL9', '_blank');">LLEGAR A LA FIESTA</button>
+                                <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/5Veiwfiv6KPTD5rL9', '_blank');">COMO LLEGAR</button>
                             </div>
                             <!-- <ul liststyle-type-none>
                                 <li>park hayatt hotel,new york </li>
@@ -536,7 +536,7 @@
                 </div>
 
                 <div class="col-xl-12 col-md-12 col-12 send-button">
-                    <button data-fancybox data-src="#modal1" href="javascript:;" data-options='{"touch" : false}' class="btn btn-primary">VER DATOS BANCARIOS</button>
+                    <button data-fancybox data-src="#modal1" href="javascript:;" data-options='{"touch" : false}' class="btn btn-primary">VER REGALOS</button>
                 </div>
 
                 <div style="display: none;" id="modal1">
