--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-    <title>Nos casamos! Emmanuel y Andrea</title>
+    <title>¡Nos casamos! Nare y Darío</title>
     <link rel="icon" href="img/favicon.png" type="image/gif">
     </link>
 
