lista de musica + fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- fonts-->
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Dancing+Script|Dosis|Kaushan+Script|Open+Sans:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Manrope" rel="stylesheet">
 
     <!-- style sheets -->
     <link href="css/style.css" rel="stylesheet">
@@ -55,9 +55,6 @@
                             <a class="nav-link" href="#home">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Propuesta">Propuesta</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#events">Evento</a>
                         </li>
                         <li class="nav-item">
@@ -72,6 +69,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#dresscode">Dresscode</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Propuesta">Propuesta</a>
                         </li>
 
                     </ul>
@@ -135,19 +135,6 @@
         </div>
 
     </section>
-
-    <section class="section-2" id="Propuesta">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <video width="100%" height="100%" loop="true" controls muted autoplay="autoplay">
-                        <source src="img/section2/video-propuesta.mp4" type="video/mp4">
-                    </video>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
    <!--  <section class="section-4" id="story">
         <div class="container">
@@ -282,10 +269,10 @@
 
                 <div class="col-xl-6 col-md-6 event text-center">
                     <div class="col-xl-11 p-0 border-area">
-                        <img src="img/section5/party.jpg" />
+                        <img src="img/section5/party.webp" />
                         <div class="content">
                             <h1>Fiesta</h1>
-                            <p>Luego de la ceremonia religiosa, realizaremos la ceremonia civil y festejaremos en Club 20 de Febrero - Salón Alvarado. Tocá el botón de abajo y encontrá las indicaciones para llegar</p>
+                            <p>Luego realizaremos la ceremonia civil y festejaremos en Club 20 de Febrero - Salón Alvarado. Tocá el botón de abajo y encontrá las indicaciones para llegar</p>
                             <div class="col-xl-12 col-md-12 col-12 send-button">
                                 <button class="btn btn-primary" onClick="javascript:window.open('https://goo.gl/maps/5Veiwfiv6KPTD5rL9', '_blank');">COMO LLEGAR</button>
                             </div>
@@ -531,7 +518,7 @@
 
                 <div class="rowSection" >
                     <div class="col-xl-12 col-md-12 col-12">
-                        <p>Si deseás realizarnos un regalo podés colaborar con nuestra Luna de Miel...</p>
+                        <p>Nuestra casita ya está armada, ayúdanos con nuestra “Luna de Miel"...</p>
                     </div>
                 </div>
 
@@ -548,10 +535,6 @@
                         <li>CBU: 0720165988000039225036</li>
                         <li>Titular de la cuenta: Acuña Araceli Narela</li>
                         <li>Documento: 40149078</li>
-                    </ul>
-                    <span class="title">Lista de Regalos</span>
-                    <ul>
-                        <li><a target="_blank" href="">Lista de regalos</a></li>
                     </ul>
                     
                 </div>
@@ -600,6 +583,58 @@
 
                 <div class="col-xl-12 col-md-12 col-12 people content">
                     <p>VESTIMENTA FORMAL, ELEGANTE</p>
+                </div>
+
+            </div>
+    </section>
+
+    <section class="section-2" id="Propuesta">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-xl-12 heading">
+                    <h1>La Propuesta</h1>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-xl-12">
+                    <video width="100%" height="100%" loop="true" controls muted autoplay="autoplay">
+                        <source src="img/section2/video-propuesta.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-6" id="regalo">
+        <div class="container">
+            <div class="row ">
+
+                <!-- <div class="col-xl-12 heading">
+                    <h1>people</h1>
+                </div> -->
+
+            </div>
+            <div class="row groom-family">
+               <!--  <div class="col-xl-12 people-heading">
+
+                    <h1>tom's family</h1>
+
+
+                </div> -->
+                <div class="col-xl-12 heading">
+                    <h1>Música</h1>
+                </div>
+
+                <div class="rowSection" >
+                    <div class="col-xl-12 col-md-12 col-12">
+                        <p>Queremos que seas parte de nuestra celebración, en este espacio podes agregar aquellas canciones que no pueden faltar en este momento tan especial.</p>
+                    </div>
+                </div>
+
+                <div class="col-xl-12 col-md-12 col-12 send-button">
+                    <button class="btn btn-primary" onClick="javascript:window.open('https://www.youtube.com/playlist?list=PL_Sqqndh5zd3jMq-xFmahLR0Gzuenvdxl&jct=B5Oq2aRZWAcmfGYN1w4GbhNukEwwHg', '_blank');">IR A LA LISTA</button>
                 </div>
 
             </div>
