--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#Propuesta">Propuesta</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Musica">Musica</a>
+                        </li>
 
                     </ul>
                 </div>
@@ -607,7 +610,7 @@
         </div>
     </section>
 
-    <section class="section-6" id="regalo">
+    <section class="section-6" id="Musica">
         <div class="container">
             <div class="row ">
 
